--- a/index.html
+++ b/index.html
@@ -1,97 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>HTML5上传文件</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<link href="" rel="stylesheet">
-    <script src="http://apps.bdimg.com/libs/jquery/1.8.3/jquery.min.js"></script>
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1,user-scalable=no">
+    <meta charset="UTF-8">
+    <style type="text/css">
+    .addbtn img {
+        width: 100px;
+    }
+    .imgPreview {
+        width: 100px;
+        height: 100px;
+        margin: 10px;
+    }
+    </style>
 </head>
+
 <body>
-    <form id="myForm" method="post" action="upload.php" enctype="multipart/form-data">
-        <input type="file" id="u_photo" name="u_photo" />
-        <input type="button" id="submit-btn" value="上传" />
-        <!-- <input type="submit" id="submit-btn" value="上传" /> -->
+    <h2>HTML5异步上传图片，带进度条</h2>
+    <form method="post">
+        <!-- 其他需要提交的信息：
+        <input type="text" name="otherInfo" /> -->
+        <a href="Javascript:;" class="addbtn" id="addImgBtn">
+            <img src="static/images/add.png" alt="选择并添加图片">
+        </a>
     </form>
-    <script>
-        $("#submit-btn").on('click', function() {
-
-            $.ajax({
-                url: 'upload.php',
-                type: 'POST',
-                //十分重要，不能省略
-                cache: false,
-                processData: false,
-                contentType: false,
-                dataType: 'json',
-                data:new FormData(document.getElementById('myForm'))
-            })
-            .done(function(data) {
-                // alert("上传成功！");
-                // window.location.href='upload.php';
-                console.log(data)
-            })
-            .fail(function() {
-                alert("上传失败！");
-            });
-            // return false;
-
-            /*$.ajax({
-                url:"upload.php",
-                type:"post",
-                data:new FormData($("#myForm").get(0)),
-                //十分重要，不能省略
-                cache: false,
-                processData: false,
-                contentType: false,
-                success: function () {
-                    alert("上传成功！");
-                },
-
-                xhr: function() {
-                    var myXhr = $.ajaxSettings.xhr();
-                    if (myXhr.upload) {
-                        myXhr.upload.addEventListener('progress', function(e) {
-                            if (e.lengthComputable) {
-                                $('progress').attr({
-                                    value: e.loaded,
-                                    max: e.total,
-                                });
-                            }
-                        } , false);
-                    }
-                    return myXhr;
-                }
-            });*/
-        });
-        $('#u_photo').on('change', function() {
-            var file = this.files[0];
-            if (file.size > 1024*1000) {
-                alert('文件最大1M！')
-            }
-        });
-
-
-
-
-            //上传文件不能用$("form").serialize()来序列化
-         /*xhr: function() {
-            var myXhr = $.ajaxSettings.xhr();
-            if (myXhr.upload) {
-                myXhr.upload.addEventListener('progress', function(e) {
-                    if (e.lengthComputable) {
-                        $('progress').attr({
-                            value: e.loaded,
-                            max: e.total,
-                        });
-                    }
-                } , false);
-            }
-            return myXhr;
-        }*/
-
-    </script>
+    <div id="imgPreview">
+        <br/>
+        <h3>图片预览：</h3>
+        <!-- <img id="img" style="width:100;height:100"/> -->
+    </div>
+    <br/>
+    <br/>
+    <input type="button" value="开始上传" onclick="upload()" />
+    <br/>
+    <br/> 上传进度：
+    <progress value="0" max="100"></progress>
+    <br/>
+    <p id="progress"></p>
+    <p id="info"></p>
+    <div id="result"></div>
+    <script src="http://apps.bdimg.com/libs/jquery/1.8.3/jquery.min.js"></script>
+    <script src="static/js/upload.js"></script>
 </body>
+
 </html>
